# QuantGPT

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  INTERVIEW_PREP.md  LEARNING_LOG.md  README.md
scripts/: run_api.sh  run_with_ollama.md
src/quantgpt/: __init__.py  cli.py  exceptions.py
src/quantgpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quantgpt/agents/: __init__.py  base.py  math_agent.py  research_agent.py
src/quantgpt/api/: __init__.py  config.py  main.py
src/quantgpt/api/routes/: health.py  models.py  research.py
src/quantgpt/api/schemas/: __init__.py  health.py  models.py  research.py
src/quantgpt/dashboard/: app.py
src/quantgpt/forecasting/: __init__.py  models.py
src/quantgpt/nlp/: __init__.py  sentiment.py
src/quantgpt/portfolio/: __init__.py  optimizer.py
src/quantgpt/tools/: __init__.py  calculator.py  fetch_news.py  sentiment.py
tests/: conftest.py  test_agents.py  test_api.py  test_imports.py  test_research_agent.py  test_tools.py
