[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantgpt"
version = "0.1.0"
description = "AI-powered multimodal investment advisor"
authors = [{ name = "Sawan Kumar" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
