[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantgpt"
version = "0.1.0"
description = "AI-powered multimodal investment advisor"
authors = [{ name = "Sawan Kumar" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
quantgpt-api = "quantgpt.api.main:run"
